more edits discussion

--- a/Manuscript/PTMsMODa.tex
+++ b/Manuscript/PTMsMODa.tex
@@ -190,23 +190,25 @@ The recommended mass-shift for MODa program is finding mass-shifts between -200 
 %Mapping the entire proteome involves mapping all the post-translational modifications on the proteins. This is a challenging goal, given the enrichment techniques for PTMs along with the computational search algorithms to identify these PTMs.
 %In the last decade, however there has been lot of effort to improve search algorithms to increase the coverage of PTMs i.e., using unrestricted approaches instead of traditional search, where a guessed list of only handful PTMs is provided beforehand.
 
-We looked at temporal changes of the post-translational modifications in \emph{E. coli} REL606 strain. For this, we used mass-spectrometry based proteomics data. This data is collected under glucose limiting conditions for different phases of the growth i.e., exponetial to long-stationary phases upto 2 weeks under these conditions. For the 9 time points analyzed (3 hours to 2 weeks), several interesting insights into the frequency and the temporal changes of post-translational modifications seen in this analysis. First, we show that consistently 30\% of the proteome is modified at all the 9 time points analyzed. Second, we show that n-term protein acetylation goes up from exponential to stationary phases pointing to a likely role of this modification during late stages of the growth. Similar results were found for phosphorylation, carboxylation too. However, oxidative stress seem to go down from exponetial to stationary phases. Nutrient limitation, accumulation of toxic substances and change in pH were supposed to increase the oxidative stress, however \emph{E. coli} has a mechanism to protect the cell from oxidative damage using the sulfoxide reductases fixing MetSO back to Met. Finally, the computational techniques used in this study can be used with any mass-spectrometry based proteomics data to identify or characterize novel post-translational modifications.
+We looked at temporal changes of the post-translational modifications in \emph{E. coli} REL606 strain. For this, we used mass-spectrometry based proteomics data. This data is collected under glucose limiting conditions for different phases of the growth i.e., exponetial to long-stationary phases upto 2 weeks under these conditions. For the 9 time points analyzed (3 hours to 2 weeks), there were several interesting insights about the post-translational modifications observed on \emph{E. coli} proteins. First, we show that consistently 30\% of the proteome is modified at all the 9 time points analyzed. Second, we show that n-term protein acetylations goes up from exponential to stationary phases pointing to a likely role of this modification during late stages of the growth. Similar increase was seen for phosphorylation too. However, oxidation levels seem to go down from exponetial to stationary phases. Nutrient limitation, accumulation of toxic substances and change in pH were supposed to increase the oxidative stress, however \emph{E. coli} has a mechanism to protect the cell from oxidative damage using the sulfoxide reductases fixing MetSO back to Met. Finally, the computational protocol developed in this study can be used with any mass-spectrometry based proteomics data to identify, characterize and analyze many post-translational modifications in \emph{tandem}.
 
-Recently, the focus has shifted from identifying peptides/proteins to characterizing PTMs as shown in this recent review article \cite{OlsenMann2013}. However identifying all the PTMs present in the sample is limited both by experimental enrichment techniques that cannot be applied to all kinds of PTMs at once and also from the computational limitations, although there has been an improvement in the latter limitation lately. Some of the future applications of current methodology of identifying PTMs at once is to help understand the PTM crosstalk under each condition analyzed. This in turn helps us to understand the protein regulation or function specifically generally caused by many PTMs acting in concert, as earlier witnessed \cite{Pengetal2014}. So, analysis of PTMs in \emph{tandem} is a necessity to get accurate reflections of the underlying interactions of the PTMs. Previous work in this area used the PTMs deposited in the database, however care must be taken, as these PTMs were identified at different growth phases under differing conditions \cite{Pengetal2014}.
+Recently, the focus has shifted from identifying peptides/proteins to characterizing PTMs as shown in this recent review article \cite{OlsenMann2013}. However identifying all the PTMs present in the sample is limited both by experimental enrichment techniques that cannot be applied to all kinds of PTMs at once and also from the computational limitations, although there has been some improvement in the latter limitation lately. Some of the future applications of current methodology of identifying PTMs at once is to help understand the PTM crosstalk under each condition analyzed. This in turn helps us to understand the protein regulation or function specifically generally caused by many PTMs acting in concert, as earlier witnessed \cite{Pengetal2014}. Previous work in this area either used the PTMs deposited in the database \cite{Guptaetal2007}, or limited the analysis to a single PTM \cite{Soaresetal2013}.
 
-In one study \cite{Soufietal2015}, variant of MaxQuant algorithm is used to do an unrestricted search in \emph{E. coli} during exponential and extended stationary phases of growth, however our study used a more advanced algorithm, MODa, suited to do a larger window of mass-shifts. In \cite{Soufietal2015}, these mass-shifts were not seen, either probably because of the sample processing or more likely because of using a general search engine, instead of MODa. 
+%In one study \cite{Soufietal2015}, variant of MaxQuant algorithm is used to do an unrestricted search in \emph{E. coli} during exponential and extended stationary phases of growth, however our study used a more advanced algorithm, MODa, suited to do a larger window of mass-shifts. In \cite{Soufietal2015}, these mass-shifts were not seen, either probably because of the sample processing or more likely because of using a general search engine, instead of MODa. 
 
 %\textbf{{Move this to Intro, as suggested by MDP}}
 %In a typical mass-spectrometry based proteomics experiment, proteins are first digested into peptides and then the sample is enriched for any PTMs of interest. This sample is then analyzed by mass-spectrometry. Peptide search algorithms are then run on this mass-spectrometry data to computationally identify peptides and PTMs associated with it. These search algorithms generall fall into 3 categories: (1) Sequence or database search algorithms, (2) de novo sequence search and (3) Hybrid approach that is a mixture of partial de novo search followed by a database search. Most of the current search algorithms such as Mascot\cite{Perkinsetal1999}, Sequest \cite{Engetal1994}, OMSSA \cite{Geeretal2004}, X!Tandem \cite{CraigBeavis2004} search for only few variable modifications, i.e., oxidation of methionine etc or a small targeted list of PTMs. This technique of restricted search reduces the size of the database to search and hence alleviates lot of computational limitations \cite{McHughArthur2008}. However this limited search identifies only PTMs that were used in the target list, limiting the analysis to either the previously known PTMs or target PTMs. However, recently, software for unrestricted search of PTMs is starting to be available. MODa \cite{Naetal2012} is one such unrestricted search engine, along with others such as TagRecon\cite{Dasarietal2010} and Byonic \cite{Bernetal2012}. We used MODa, a naive based multi-blind spectral alignment algorithm, to look for PTMs in our \emph{E. coli} dataset. A few studies that used MODa in the past looked at hand-ful of interesting PTMs in depth such as \cite{Kimetal2014}, or looked at wider coverage of PTMs such as \cite{Liuetal2013}. Our interest is the wider coverage of PTMs and look in depth at both the frequently occuring mass-shifts and the well known PTMs mapped from known mass-shifts. 
 
 
-Most of the peptide identification search algorithms require a list of PTMs to search for and generally this list is limited to 6. However there are hundreds of PTMs known to date, that are identified \emph{in vivo} and well documented in databases like UNIMOD, RESID. MODa uses the prefix residue mass to comput the score. The probability is calculated using different features such as PRM score, mass errors, number of fragments matched. The program outputs mass-shifts and we can use databases such as UNIMOD, RESID to map these mass-shifts to the relevant PTMs. Here, we looked at amino acid profiles to determine the exact PTM type. However we did not try and match all the mass-shifts, but investigated in detail the frequent and well known mass-shifts identified by MODa. This resulted in analysis of +1 Da mass-shift (C13 peak detection), oxidation, acetylation, Na and K adducts, along with some widely studied PTMs such as phosphorylation, carboxylation and nitrosylation. This program is previously used for similar large-scale analysis with urinary proteomics and they identified novel PTMs. However the study used 2 programs and considered the overlap of PTMs as highly confident. Instead here, our focus is not to identify highly-confident PTMs that can be used later as biomarkers, but to get a wider coverage at a lower FDR of 1\% and look at the time course or evolution of these PTMs during the entire 2 weeks of \emph{E. coli} growth.
+Most of the peptide identification search algorithms require a list of PTMs to search for and generally this list is limited to 6. However there are hundreds of PTMs known to date, that are identified \emph{in vivo} and well documented in databases like UNIMOD \cite{CreasyCottrell2004}, RESID \cite{Garavellietal2001}. In the current work, we used MODa, a naive based spectral alignment algorithm that uses dynamic programing to identify the peptide-spectral matches, leaving the gaps as mass-shifts. MODa uses the prefix residue mass to comput the score. The probability is calculated using different features such as PRM score, mass errors, number of fragments matched. Once we have these, we post-processed the resulting files for a better understanding of the PTMs. We calculated the modified peptide spectral matches at each of the time-points. We calculated the frequently occuring mass-shifts during the entire growth phase. To see if these mass-shifts occur on a single amino acid or a set of amino acids, we plotted amino acid frequencies for the mass-shifts. The program outputs mass-shifts which we then used with UNIMOD to map the mass-shifts to the relevant PTMs. However we did not try and match all the mass-shifts, but investigated in detail the frequent and well known mass-shifts identified by MODa. In future, we would like to automate the process of identifying PTM types from mass-shifts, however, for the current work, we did this mapping manually once we identified the mass-shift and the amino acids that were observed to be modified with this  mass-shift. All the above-mentioned post-processing of MODa output files resulted in analysis of few mass-shifts representing n-term acetylation, oxidation, phosphorylation, Na and K adducts, along with few other mass-shifts that mapped to carboxylation and nitrosylation. 
 
-N-terminal processing of proteins is a well-known PTM in diverse kinds of species ranging from eukaryotes to bacteria \cite{Kimuraetal2003}. N-terminal acetylation has been shown in the past to provide insights into the nature of the n-terminal of the proteome \cite{Helbigetal2010}. In eukaryotes, n-terminal acetyltransferases are well characterized and studied, for example, as shown in these studies \cite{PolevodaSherman2003}, \cite{PolevodaSherman2003b}. In \emph{E. coli}, NATs are primarily characterized into mainly rim types \cite{Tanakaetal1989}, \cite{Yoshikawaetal1987}. There is lot of work done on lysine acetylation in \emph{E. coli}, however there are not many n-terminal acetylation sites identified or investigated in detail in the past. Here we have shown that n-term acetylation increases from exponential to stationary phase, Lysine acetylation E. coli, acetylation in exponential and stationary phases \textbf{\emph{Colin's discussion}}. 
+Some studies in the past use multiple programs to validate the peptide hits. For example, MODa results could be validated with other similar programs such as DeNovo, Byonic or TagRecon. One study by \cite{Liuetal2013} used MODa and DeNovo programs to identify the post-translational modifications. One of the main motivations for using multiple programs is to identify very high confident hits, that in turn could be used for biomarkers etc. However, our focus is not to identify very high confident PTMs, but to get a wider coverage. However, a stringent FDR of 1\% that we used with MODa would itself identify confident hits.
 
-Protein oxidation by reactive oxygen species (ROS) is important and linked to various diseases including aging \cite{Stadtman1992}. ROS generally seem to accumulate at later stages of growth, because of possible accumulation of toxic substances, nutrient limiting conditions, changes in pH etc. \emph{E. coli's} internal machinery to tackle this oxidative stress comes in many forms at different levels and in this analysis, we were interested at the protein level. \emph{E. coli} has a class of sulfoxide reductases \cite{Brotetal1981} \cite{ZhangWeissbach2008} that fix methionine sulfoxide back to methionine. MsrA and yeaA are the proteins found in this reductase class of enzymes. These reductases has been shown to protect \emph{E. coli} from oxidative damage\cite{Ezratyetal2004}. Here, we looked at the abundances of these proteins during these late stationary phases, where oxidative stress seems to be more. Our earlier work has already shown the induction of these stress proteins at stationary phases using the same mass-spec data set \cite{Houseretal2015}. Even though it is common for the oxidation to happen during sample preparation, we expect this oxidation level to be random and more or less constant at different time points of the growth curve. However, in our current data set, we clearly see that the levels of oxidation go down from exponential to stationary phase, possibly correlating with the oxidation not caused by sample preparation.
+\textbf{\emph{Colin's discussion}} N-terminal processing of proteins is a well-known PTM in most species ranging from eukaryotes to bacteria \cite{Kimuraetal2003}. One such n-terminal processing is n-terminal acetylation. N-terminal acetylation has been shown in the past to provide insights into the nature of the n-terminal of the proteome \cite{Helbigetal2010}. In eukaryotes, n-terminal acetyltransferases are well characterized and studied, for example, as shown in these studies \cite{PolevodaSherman2003}, \cite{PolevodaSherman2003b}. In \emph{E. coli}, NATs are primarily characterized into rim proteins \cite{Tanakaetal1989}, \cite{Yoshikawaetal1987}. There is lot of work done on lysine acetylation in \emph{E. coli}, however there are not many n-terminal acetylation sites identified or investigated in detail in the past. Here we have shown that n-term acetylation increases from exponential to stationary phase, Lysine acetylation E. coli, acetylation in exponential and stationary phases \textbf{\emph{Colin's discussion}}. 
 
-One of the PTM networks that is well studied in the past is the phosphorylation signaling cascade\cite{Olsenetal2006} (also look for phosphorylation papers that you used in the past at NCBI). These are well known signalling mechansims and have been shown to respond quickly to stress during the late-stationary phases \cite{Soaresetal2013}. Our analysis also supports this behavior and would like to emphasize that while the previous paper investigated only 1 PTM, our analysis investigated most of the PTMs in tandem. 
+Protein oxidation by reactive oxygen species (ROS) is linked to various diseases including aging \cite{Stadtman1992}. ROS generally accumulate at later stages of growth, possibly because of accumulation of toxic substances, nutrient limiting conditions, changes in pH etc. \emph{E. coli's} internal machinery to tackle this oxidative stress comes in many forms at different levels. In this work, we see that the oxidation levels seem to go down from exponential to stationary phase. So, we looked at the levels of the methionine sulfoxide reductases. \emph{E. coli} has a class of sulfoxide reductases \cite{Brotetal1981} \cite{ZhangWeissbach2008} that fix methionine sulfoxide back to methionine. MsrA and yeaA are the proteins found in this reductase class of enzymes. These reductases has been shown to protect \emph{E. coli} from oxidative damage\cite{Ezratyetal2004}.  Even though it is common for the oxidation to happen during sample preparation, we expect this oxidation level to be random and more or less constant at different time points of the growth curve. However, in our current data set, we clearly see that the levels of oxidation go down from exponential to stationary phase, pointing that there is some oxidation caused \emph{in vivo}.
+
+%One of the PTM networks that is well studied in the past is the phosphorylation signaling cascade\cite{Olsenetal2006} (also look for phosphorylation papers that you used in the past at NCBI). These are well known signalling mechansims and have been shown to respond quickly to stress during the late-stationary phases \cite{Soaresetal2013}. Our analysis also supports this behavior and would like to emphasize that while the previous paper investigated only 1 PTM, our analysis investigated most of the PTMs in tandem. 
 
 
 %Choi, Y. W.; Park, S. A.; Lee, H. W.; Kim, D. S.; Lee, N. G. Analysis of growth phase-dependent proteome profiles reveals differential regulation of mRNA and protein in Helicobacter pylori. Proteomics 2008, 8 (13), 2665–2675.
@@ -224,7 +226,7 @@ One of the PTM networks that is well studied in the past is the phosphorylation 
 
 There are some limitations with respect to how we did MODa searches. One of the limitations in the searches performed in the current work is that we used the default mass-range search between -200 and 200 Da (and one other search with -200 and 300 Da range). So, we miss out on larger PTMs. Another computational limitation is that we looked for only 1 possible modification on each of the peptides identified. This is because MODa was shown in the past to generate many false positives if searched for multiple PTMs on the same peptide. After the peptides are ID'ed, generally the PTMs are validated by a 2nd round by using programs like Ascore etc. However here, we did not do any 2nd round of validating peptides, as MODa is shown to ID high-confidence PTM identifications in its search. Another, probably important limitation is that we did not do any PTM level quantitation or try to understand the specific PTM stoichiometry, as these require sophisticated experimental instrumentation, good enrichment protocol and the algorithms to characterize the PTMs associated with proteins. However MODa has been a software suite that has been recently used in both in bacterial proteomics as well as biomedical applications such as urinary proteomics to find biomarkers \cite{Liuetal2013}.
 
-Current whole-cell models \cite{Covertetal2008} integrate diverse kinds of OMICS data i.e., transcriptomics, proteomics not only to refine the existing models, but also make reasonable predictions on which genes/enzymes are key for example, for a particular metabolite production etc. Here, we argue that including the modification information (i.e., number of modified proteins to that of the unmodified version) would improve the protein level abundances and thus will improve the computational predictions.
+Current whole-cell models \cite{Covertetal2008} integrate diverse kinds of OMICS data i.e., transcriptomics, proteomics not only to refine the existing models, but also make reasonable predictions on which genes/enzymes are key for example, for a particular metabolite production etc. Here, we argue that including the modification information (i.e., number of modified proteins to that of the unmodified version) would improve the protein level abundances and thus will improve the computational predictions. Another advantage of the protocol we developed here is to study the PTM networks in cohert. Most of the PTM networks studied till date either focussed on a single PTM such as phosphorylation \cite{Olsenetal2006} or handful of related PTMs, such as glycosylation and phosphorylation.
 
 \section{Conclusions}
 
@@ -287,38 +289,38 @@ This project was funded by ARO Grant W911NF-12-1-0390. We thank John Houser and 
 
 \begin{figure}[!ht]
 \centerline{\includegraphics[width=4in]{Figures/PTM_modified.pdf}}
-\caption{\label{fig:ModifiedPTM}\textbf{\emph{E. coli} modified proteome.} The total number of modified peptide-spectral matches seem to be constant at ~30\% for all 9 time points. .
+\caption{\label{fig:ModifiedPTM}\textbf{\emph{E. coli} modified proteome.} The total number of modified peptide-spectral matches seem to be constant at ~30\% for all 9 time points.
 }
 \end{figure}
 
 \clearpage
 \begin{figure}[!ht]
 \centerline{\includegraphics[width=8in]{Figures/PTMdalton.pdf}}
-\caption{\label{fig:PTMinDalton}\textbf{MODa outputs mass-shifts.} A naïve based algorithm like MODa can alleviate the requirement of guessing PTMs beforehand. However MODa outputs mass-shifts on the amino acids. We can then use PTM databases like UNIMOD to map the mass-shift to the most probable PTM. (A) and (B) are the frequencies of the mass-shifts observed  at 3 hours and 2 weeks of the \emph{E. coli} growth.}
+\caption{\label{fig:PTMinDalton}\textbf{MODa outputs mass-shifts.} A naïve based algorithm like MODa can alleviate the requirement of guessing PTMs beforehand. However MODa outputs mass-shifts on the amino acids. We used UNIMOD to map the mass-shift to the most probable PTM, depending on its frequency on the amino acids the mass-shift occurs. (A) and (B) are the frequencies of the mass-shifts observed  at 3 hours and 2 weeks of the \emph{E. coli} growth.}
 \end{figure}
 
 \clearpage
 \begin{figure}[p]
 \centerline{\includegraphics[width=5in]{Figures/Acetylation_AAs.pdf}}
-\caption{\label{fig:Acet}\textbf{Protein n-term acetylations are dominant.} Total number of acetylations as well as the n-term/serine acetylations seem to go up over 2 weeks. \emph{E. coli} grown on glucose generally tend to accumulate acetate, perhaps this resulted in increase in acetylations.}\textbf{\emph{Is this percent of all PSMs, or all peptides?  What is the number value?}}
+\caption{\label{fig:Acet}\textbf{Protein n-term acetylations are dominant.} Total number of acetylations as well as the n-term/serine acetylations seem to go up over 2 weeks. \emph{E. coli} grown on glucose generally tend to accumulate acetate, perhaps this resulted in increase in acetylations.} y-axis is the percentage of modified peptide-spectral matches.
 \end{figure}
 
 \clearpage
 \begin{figure}[p]
 \centerline{\includegraphics[width=5in]{Figures/AcetylatedProteins.png}}
-\caption{\label{fig:Acet}\textbf{N-terminal acetylated peptides show differing patterns of NtAc across growth timepoints.} Counts for all peptides the protein's N-terminus and containing an Nt-acetylation (either a 42 or 43 Da mass shift) were summed across three biological replicates for each timepoint.  Color intensity shows log2-transformed, non-normalized NtAc peptide count for each timepoint. Proteins (rows) are sorted by mean abundance across all timepoints, with most abundant at the top.}
+\caption{\label{fig:Acet}\textbf{N-terminal acetylated peptides show differing patterns of NtAc across growth timepoints.} Counts for all peptides the protein's N-terminus and containing an Nt-acetylation (42 Da mass shift) were summed across three biological replicates for each timepoint.  Color intensity shows log2-transformed, non-normalized NtAc peptide count for each timepoint. Proteins (rows) are sorted by mean abundance across all timepoints, with most abundant at the top.}
 \end{figure}
 
 \clearpage
 \begin{figure}[p]
 \centerline{\includegraphics[width=5in]{Figures/Phosphorylations.pdf}}
-\caption{\label{fig:Phos}\textbf{Phosphorylations are rare.} Phosphorylations seem to be low and tend to increase during last week of growth. 2 frequently phosphorylated proteins in MODa search output are phosphoglucomutase and elongation factor Tu.}
+\caption{\label{fig:Phos}\textbf{Phosphorylations are rare.} Phosphorylations seem to be less abundant in this data set and tend to increase during last week of growth. Phosphoglucomutase (pgl) is the only phosphorylated protein identified during the exponential phase, while there were few proteins that were phosphorylated during stationary phase and long-stationary phase. Some of these proteins were elongation factor Tu, CTP synthetase along with pgl.}
 \end{figure}
 
 \clearpage
 \begin{figure}[p]
 \centerline{\includegraphics[width=5in]{Figures/MetGluTimeCourse.pdf}}
-\caption{\label{fig:Phos}\textbf{Methionine to Glutamine subsitution.} .}
+\caption{\label{fig:Phos}\textbf{Methionine to Glutamine subsitution.} One mass-shift observed on methionine is -2Da. This mass-shift was annotated as methionine to glutamine subsitution in UNIMOD.}
 \end{figure}
 
 
